--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24"><path fill="currentColor" d="M12 21Q8.25 21 5.625 18.375Q3 15.75 3 12Q3 8.25 5.625 5.625Q8.25 3 12 3Q12.35 3 12.688 3.025Q13.025 3.05 13.35 3.1Q12.325 3.825 11.713 4.987Q11.1 6.15 11.1 7.5Q11.1 9.75 12.675 11.325Q14.25 12.9 16.5 12.9Q17.875 12.9 19.025 12.287Q20.175 11.675 20.9 10.65Q20.95 10.975 20.975 11.312Q21 11.65 21 12Q21 15.75 18.375 18.375Q15.75 21 12 21ZM12 19Q14.2 19 15.95 17.788Q17.7 16.575 18.5 14.625Q18 14.75 17.5 14.825Q17 14.9 16.5 14.9Q13.425 14.9 11.262 12.738Q9.1 10.575 9.1 7.5Q9.1 7 9.175 6.5Q9.25 6 9.375 5.5Q7.425 6.3 6.213 8.05Q5 9.8 5 12Q5 14.9 7.05 16.95Q9.1 19 12 19ZM11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Q11.75 12.25 11.75 12.25Z"/></svg>
         </div>
       </div>
-      
+
       <div class="page-wrapper" asscroll>
         <section class="hero">
           <div class="hero-wrapper">
@@ -47,12 +47,12 @@
             </div>
 
             <div class="hero-main">
-              <h1 class="hero-main-title">Abigail Bloom</h1>
-              <p class="hero-main-description">Digital Media Student | 3D Artist</p>
+              <h1 class="hero-main-title">Grace Raper</h1>
+              <p class="hero-main-description">XR Software Engineer</p>
             </div>
 
             <div class="hero-second">
-              <p class="hero-second-subheading first-sub">AbigailBloom</p>
+              <p class="hero-second-subheading first-sub">Digital</p>
               <p class="hero-second-subheading second-sub">Portfolio</p>
             </div>
 
@@ -78,9 +78,17 @@
           
 
           <div class="section-detail-wrapper">
-            <!-- <h3 class="section-heading">Hello!</h3> -->
-            <p class="section-text">Hi there 👋! I'm a third-year digital media student from UK currently studying in Germany. My dream is to work for Disney or Pixar one day.</p>
-            <p class="section-text"> I love creating art and playing with my cats! I also like drinking bubble tea and going for hikes! Totally hippie lol ✌️. Welcome to my portfolio!</p>
+            <h3 class="section-heading">Hi there, I'm Grace! 👋</h3>
+            <p class="section-text">I'm a XR software engineer with a passion for leveraging emerging technologies to create interactive and impactful digital experiences.</p>
+            <p class="section-text">I did my undergrad @ the University of Washington in Seattle where I received a B.S. in Computer Science (Data Science focused) & minored in Applied Mathematics.</p>
+            <p class="section-text">I'm based in Seattle, Washington & I'm currently looking for software engineering roles!</p>
+            <p class="section-text">In my free time you can find me:
+            <ul style="padding-left:20px">
+              <li>🚣‍ Rowing across Lake Union</li>
+              <li>✈️ Flying over Seattle practicing for my pilots license</li>
+              <li>📸 Snapping photos towards my goal of taking 100k pictures in 2023</li>
+            </ul>
+            </p>
             <!-- <h3 class="section-heading">Lorem Ipsum</h3>
             <p class="section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic expedita qui quae officiis, magni velit iste repellat consequuntur temporibus. Quasi atque officia iste beatae rerum, harum itaque accusamus. At, natus?</p> -->
             <!-- <h3 class="section-heading">Lorem Ipsum</h3>
@@ -124,7 +132,7 @@
 
           <div class="section-intro-wrapper green-text green-border">
             <h1 class="section-title green-text green-border">
-              <span class="section-title-text green-text">Contact Me</span>
+              <span class="section-title-text green-text">Get in Touch!</span>
               <div class="section-title-decoration styleOne green-border"></div>
               <div class="section-title-decoration styleTwo green-border"></div>
               <div class="section-title-decoration styleThree green-background green-border"></div>
