--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
           </div>
 
           <div class="section-detail-wrapper">
-            <h3 class="section-heading">Candycane Village</h3>
-            <p class="section-text">This project is in progress but it's about a super colorful village where the entire world including the people are candies. So far the story is that they are set out to explore their "space" only to realize it's a human that will try to destroy them.</p>
-            <h3 class="section-heading">Rebecca's Reddish Radishes</h3>
-            <p class="section-text">Oh what's that? Why, it's a red radish! Oop, another one! In this playful and comedy animation, Rebecca, a young farmer, decided to plant radishes for the first time, but there is a big twist!</p>
-            <h3 class="section-heading">Flora</h3>
-            <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>
+            <h3 class="section-heading">Project 1</h3>
+            <p class="section-text">A description of project 1 here :)</p>
+            <h3 class="section-heading">Project 2</h3>
+            <p class="section-text">A description of project 2 here :)</p>
+            <h3 class="section-heading">Project 3</h3>
+            <p class="section-text">A description of project 3 here :)</p>
           </div>
         </section>
 
