new room model loads

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <canvas class="experience-canvas"></canvas>
     </div>
 
-    <!-- Preloader -->
+     Preloader
     <div class="preloader">
       <div class="preloader-wrapper">
         <div class="loading">
