contact form added; needs style edits + backend

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <div class="section-intro-wrapper">
         <h1 class="section-title">
           <span class="section-title-text">About Me</span>
-          <div class="section-title-decoration styleOne"></div>
-          <div class="section-title-decoration styleTwo"></div>
-          <div class="section-title-decoration styleThree"></div>
+<!--          <div class="section-title-decoration styleOne"></div>-->
+<!--          <div class="section-title-decoration styleTwo"></div>-->
+<!--          <div class="section-title-decoration styleThree"></div>-->
         </h1>
         <span class="section-number">01</span>
       </div>
@@ -80,19 +80,8 @@
       <div class="section-detail-wrapper">
         <h3 class="section-heading">Hi there, I'm Grace! 👋</h3>
         <p class="section-text">I'm a XR software engineer with a passion for leveraging emerging technologies to create interactive and impactful digital experiences.</p>
-        <p class="section-text">I did my undergrad @ the University of Washington in Seattle where I received a B.S. in Computer Science (Data Science focused) & minored in Applied Mathematics.</p>
-        <p class="section-text">I'm based in Seattle, Washington & I'm currently looking for software engineering roles!</p>
-        <p class="section-text">In my free time you can find me:
-        <ul style="padding-left:20px">
-          <li>🚣‍ Rowing across Lake Union</li>
-          <li>✈️ Flying over Seattle practicing for my pilots license</li>
-          <li>📸 Snapping photos towards my goal of taking 100k pictures in 2023</li>
-        </ul>
-        </p>
-        <!-- <h3 class="section-heading">Lorem Ipsum</h3>
-        <p class="section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic expedita qui quae officiis, magni velit iste repellat consequuntur temporibus. Quasi atque officia iste beatae rerum, harum itaque accusamus. At, natus?</p> -->
-        <!-- <h3 class="section-heading">Lorem Ipsum</h3>
-        <p class="section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic expedita qui quae officiis, magni velit iste repellat consequuntur temporibus. Quasi atque officia iste beatae rerum, harum itaque accusamus. At, natus?</p> -->
+        <p class="section-text">I recently completed undergrad at The University of Washington where I studied Computer Science & Applied Mathematics.</p>
+        <p class="section-text">I'm currently looking for engineering roles! Keep scrolling to see what I've been working on lately.</p>
       </div>
     </section>
 
@@ -105,21 +94,24 @@
 
       <div class="section-intro-wrapper blue-text blue-border">
         <h1 class="section-title blue-text blue-border">
-          <span class="section-title-text blue-text">My Work</span>
-          <div class="section-title-decoration styleOne blue-border"></div>
-          <div class="section-title-decoration styleTwo blue-border"></div>
-          <div class="section-title-decoration styleThree blue-background blue-border"></div>
+          <span class="section-title-text blue-text">Ghost Pacer</span>
+<!--          <div class="section-title-decoration styleOne blue-border"></div>-->
+<!--          <div class="section-title-decoration styleTwo blue-border"></div>-->
+<!--          <div class="section-title-decoration styleThree blue-background blue-border"></div>-->
         </h1>
         <span class="section-number blue-text">02</span>
       </div>
 
       <div class="section-detail-wrapper">
-        <h3 class="section-heading">Candycane Village</h3>
-        <p class="section-text">This project is in progress but it's about a super colorful village where the entire world including the people are candies. So far the story is that they are set out to explore their "space" only to realize it's a human that will try to destroy them.</p>
-        <h3 class="section-heading">Rebecca's Reddish Radishes</h3>
-        <p class="section-text">Oh what's that? Why, it's a red radish! Oop, another one! In this playful and comedy animation, Rebecca, a young farmer, decided to plant radishes for the first time, but there is a big twist!</p>
-        <h3 class="section-heading">Flora</h3>
-        <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>
+        <h3 class="section-heading">What is it?</h3>
+        <p class="section-text">Ghost Pacer is a Techstars-backed startup that ran one of the most successful (top 1%) crowdfunding campaigns in history for custom augmented reality glasses designed for runners.</p>
+        <h3 class="section-heading">My Role</h3>
+        <p class="section-text">I spent 2 years at Ghost Pacer working on </p>
+        <h3 class="section-heading">Interested?</h3>
+        <p class="section-text">Learn more about the project and my contributions here.</p>
+<!--        <p class="section-text">Oh what's that? Why, it's a red radish! Oop, another one! In this playful and comedy animation, Rebecca, a young farmer, decided to plant radishes for the first time, but there is a big twist!</p>-->
+<!--        <h3 class="section-heading">Flora</h3>-->
+<!--        <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>-->
       </div>
     </section>
 
@@ -132,21 +124,115 @@
 
       <div class="section-intro-wrapper green-text green-border">
         <h1 class="section-title green-text green-border">
-          <span class="section-title-text green-text">Get in Touch!</span>
-          <div class="section-title-decoration styleOne green-border"></div>
-          <div class="section-title-decoration styleTwo green-border"></div>
-          <div class="section-title-decoration styleThree green-background green-border"></div>
+          <span class="section-title-text green-text">Let's Connect!</span>
+<!--          <div class="section-title-decoration styleOne green-border"></div>-->
+<!--          <div class="section-title-decoration styleTwo green-border"></div>-->
+<!--          <div class="section-title-decoration styleThree green-background green-border"></div>-->
         </h1>
         <span class="section-number green-text">03</span>
+
+      </div>
+      <div class="section-detail-wrapper">
+        <h3 class="section-heading">My Socials</h3>
+        <p class="section-text">Github | LinkedIn | Behance | Medium </p>
+        <div id="contact-container">
+          <!--Form Container-->
+          <div id="contact-form-container" class="column contact-container">
+            <div id="contact-name-input" class="input-container column">
+              <div class="row">
+                <label for="contact-name-input-field">Name :</label>
+                <span class="error-label hide">Please enter your name.</span>
+              </div>
+              <input id="contact-name-input-field" tabindex="-1">
+            </div>
+            <div id="contact-email-input" class="input-container column">
+              <div class="row">
+                <label for="contact-email-input-field">Email :</label>
+                <span class="error-label hide">Please enter a valid email address.</span>
+              </div>
+              <input id="contact-email-input-field" type="email" tabindex="-1">
+            </div>
+            <div id="contact-message-input" class="input-container column">
+              <div class="row">
+                <label for="contact-message-input-field">Message :</label>
+                <span class="error-label hide">Please enter your message.</span>
+              </div>
+              <textarea id="contact-message-input-field" tabindex="-1"></textarea>
+            </div>
+            <div class="row" id="contact-button-container">
+              <!--Social Icons-->
+                          <a tabindex="-1" target="_blank" href="https://twitter.com/grace.raper"><img class="social-icon"
+                                                                                                     src="/icons/twitter-icon.png" alt="twitter contact social icon small 28x28"
+                                                                                                     height="28" width="28"></a>
+                          <a tabindex="-1" target="_blank" href="https://github.com/grace-raper"><img class="social-icon"
+                                                                                                    alt="github contact social icon small 28x28" height="28" width="28"
+                                                                                                    src="/icons/github-icon.png"></a>
+                          <a tabindex="-1" target="_blank" href="https://www.linkedin.com/in/graceraper/">
+                            <img class="social-icon " alt="linkedin contact social icon small 28x28" height="28"
+                                 width="28" src="/icons/linkedin-icon.png"></a>
+                          <a tabindex="-1" href="mailto:graceraper@gmail.com"> <img class="social-icon"
+                                                                                        alt="email contact social icon small 28x28" height="28" width="28"
+                                                                                        src="/icons/mail-icon.png"></a>
+              Submit Button
+              <div id="contact-submit-button" class="small-button orange-hover">
+                Submit
+              </div>
+            </div>
+          </div>
+          Loading Container
+                  <div id="contact-loading-container" class="center contact-container hide">
+                    <h4>Delivering...</h4>
+                  </div>
+
+                  <!--Result Container-->
+                  <div id="contact-result-container" class="contact-container column center hide">
+                    <svg viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+                      <polyline id="contact-success-line" class="hide" stroke="#A1CC4D" points="10,70 40,100 115,20">
+                      </polyline>
+                      <line stroke="rgb(216, 84, 84)" class="contact-error-line" x1="5" y1="5" x2="115" y2="115">
+                      </line>
+                      <line stroke="rgb(216, 84, 84)" class="contact-error-line" x1="115" y1="5" x2="5" y2="115">
+                      </line>
+                    </svg>
+                    <div id="contact-result-message-container" class="center column">
+
+                    </div>
+                    <div class="small-button orange-hover" id="contact-result-button"></div>
+                  </div>
+
+        </div>
+      </div>
+
+    </section>
+
+    <section id="contact-section" class="content-width column">
+
+    </section>
+
+    <div class="second-move section-margin"></div>
+
+    <section class="second-section section right">
+      <div class="progress-wrapper progress-bar-wrapper-right">
+        <div class="progress-bar blue-background"></div>
+      </div>
+
+      <div class="section-intro-wrapper blue-text blue-border">
+        <h1 class="section-title blue-text blue-border">
+          <span class="section-title-text blue-text">My Work</span>
+          <!--          <div class="section-title-decoration styleOne blue-border"></div>-->
+          <!--          <div class="section-title-decoration styleTwo blue-border"></div>-->
+          <!--          <div class="section-title-decoration styleThree blue-background blue-border"></div>-->
+        </h1>
+        <span class="section-number blue-text">02</span>
       </div>
 
       <div class="section-detail-wrapper">
-        <h3 class="section-heading">ArtStation</h3>
-        <p class="section-text">I post all my work here. I don't want to link it yet because I want to sort it out a little bit!</p>
-        <h3 class="section-heading">Instagram</h3>
-        <p class="section-text">Check out my personal instagram for travel pics and food and stuff.</p>
-        <h3 class="section-heading">LinkedIn</h3>
-        <p class="section-text">Career updates and so much more!</p>
+        <h3 class="section-heading">Candycane Village</h3>
+        <p class="section-text">This project is in progress but it's about a super colorful village where the entire world including the people are candies. So far the story is that they are set out to explore their "space" only to realize it's a human that will try to destroy them.</p>
+        <h3 class="section-heading">Rebecca's Reddish Radishes</h3>
+        <p class="section-text">Oh what's that? Why, it's a red radish! Oop, another one! In this playful and comedy animation, Rebecca, a young farmer, decided to plant radishes for the first time, but there is a big twist!</p>
+        <h3 class="section-heading">Flora</h3>
+        <p class="section-text">A heartwarming story about a little orphan girl who tries to find her way back home.</p>
       </div>
     </section>
 
