--- a/social-filters/index.html
+++ b/social-filters/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Social Filters</title>
+    <title>Grace Raper</title>
 </head>
 <body>
-
+<h1> Social Filters </h1>
+Welcome to the project page!
 </body>
 </html>
