misc changes to index.html & style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="favicon.svg" rel="icon" type="image/svg+xml"/>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, target-densityDpi=device-dpi, minimal-ui'
           name='viewport'/>
-    <title>Abigail Bloom</title>
+    <title>Grace Raper</title>
 </head>
 <body class="light-theme">
 <div class="experience">
@@ -120,17 +120,21 @@
                     runners.</p>
                 <h3 class="section-heading">My Role</h3>
                 <p class="section-text">I spent 2 years as Lead Software Engineer at Ghost Pacer.
-                    To learn more about my contributions, check out the <a href="/ghost-pacer/index.html"> project page</a>! []</p>
+                    To learn more about my contributions, check out the <a href="/ghost-pacer/index.html"> project page</a>!</p>
                 <p class="section-text">
+                    <button class="button-33" role="button">AR/VR Headsets</button>
                     <button class="button-33" role="button">Go (Golang)</button>
-                    <button class="button-33" role="button">Java</button>
-                    <button class="button-33" role="button">Python</button>
-                    <button class="button-33" role="button">Go (Golang)</button>
-                    <button class="button-33" role="button">Java</button>
-                    <button class="button-33" role="button">Python</button>
-                    <button class="button-33" role="button">Go (Golang)</button>
-                    <button class="button-33" role="button">Java</button>
-                    <button class="button-33" role="button">Python</button>
+
+                    <button class="button-33" role="button">GPS/Location Data</button>
+                    <button class="button-33" role="button">IMU Data</button>
+                    <button class="button-33" role="button">3D Math</button>
+                    <button class="button-33" role="button">Bluetooth</button>
+                    <button class="button-33" role="button">Swift</button>
+                    <button class="button-33" role="button">HealthKit</button>
+                    <button class="button-33" role="button">Core Location</button>
+                    <button class="button-33" role="button">OpenGL/ES</button>
+                    <button class="button-33" role="button">C++</button>
+                    <button class="button-33" role="button">Unity</button>
                 </p>
 <!--                <h3 class="section-heading">Interested?</h3>-->
 <!--                <p class="section-text">Learn more about the project and my contributions here.</p>-->
@@ -157,21 +161,18 @@
                 <p class="section-text">CaspirCam is an iOS app that empowers people to compose photos like a pro.
                     Using Augmented Reality and Computer Vision, CaspirCam guides user's in real-time to set up shots
                     that follow the composition principals used by world-class photographers.</p>
-                <p class="section-text">Already have an inspiration photo?
-                   Upload your reference image and let CaspirCam help you recreate it!</p>
+<!--                <p class="section-text">Already have an inspiration photo?-->
+<!--                   Upload your reference image and let CaspirCam help you recreate it!</p>-->
                 <h3 class="section-heading">My Role</h3>
-                <p class="section-text">I conceptualized, designed & built the whole CaspirCam experience myself!</p>
-                <p class="section-text">Learn more about the app & test it out here. [->]</p>
+                <p class="section-text">I conceptualized, designed & built the whole CaspirCam experience myself!
+                    Learn more about the app & test it out <a href="/caspir-cam/index.html">here</a>.</p>
                 <p class="section-text">
-                <button class="button-33" role="button">Go (Golang)</button>
-                <button class="button-33" role="button">Java</button>
-                <button class="button-33" role="button">Python</button>
-                <button class="button-33" role="button">Go (Golang)</button>
-                <button class="button-33" role="button">Java</button>
-                <button class="button-33" role="button">Python</button>
-                <button class="button-33" role="button">Go (Golang)</button>
-                <button class="button-33" role="button">Java</button>
-                <button class="button-33" role="button">Python</button>
+                    <button class="button-33" role="button">Swift</button>
+                    <button class="button-33" role="button">ARKit</button>
+                    <button class="button-33" role="button">Vision Framework</button>
+                    <button class="button-33" role="button">CoreML</button>
+                    <button class="button-33" role="button">SwiftUI</button>
+                    <button class="button-33" role="button">Objective-C</button>
                 </p>
             </div>
         </section>
@@ -192,13 +193,29 @@
             <div class="section-detail-wrapper">
                 <h3 class="section-heading">AR Game</h3>
                 <p class="section-text">Built with Unity, this game .... loreum ipsum. Learn more [here].</p>
-                <p class="section-text">Tools</p>
+                <p class="section-text">
+                    <button class="button-33" role="button">Unity</button>
+                    <button class="button-33" role="button">C#</button>
+                    <button class="button-33" role="button">Blender</button>
+                </p>
                 <h3 class="section-heading">VR Game</h3>
                 <p class="section-text">Built with Unreal, this game .... loreum ipsum. Check it out [here].</p>
-                <p class="section-text">Tools</p>
+                <p class="section-text">
+                    <button class="button-33" role="button">Unreal</button>
+                    <button class="button-33" role="button">C++</button>
+                    <button class="button-33" role="button">Blender</button>
+                </p>
                 <h3 class="section-heading">AR Filters</h3>
                 <p class="section-text">I've designed dozens of AR filters for social media platforms. I have experience in Effect House, Meta SparkAR, and Lens Studio. Try them out [here].</p>
-                <p class="section-text">Tools: </p>
+                <p class="section-text">
+                    <button class="button-33" role="button">SparkAR</button>
+                    <button class="button-33" role="button">Effect House</button>
+                    <button class="button-33" role="button">Lens Studio</button>
+                    <button class="button-33" role="button">Unity</button>
+                    <button class="button-33" role="button">Blender</button>
+                    <button class="button-33" role="button">Photoshop</button>
+                    <button class="button-33" role="button">Lightroom</button>
+                </p>
             </div>
         </section>
 
@@ -219,12 +236,22 @@
             </div>
             <div class="section-detail-wrapper">
                 <h3 class="section-heading">Continue this Experience in AR!</h3>
-                <p class="section-text">Exploring my office space in AR. Tap on objects in the scene to learn more about me!</p>
-                <a href="https://adobeaero.app.link/K63pnCOlHCb" tabindex="-1" target="_blank"><img
-                        alt="twitter contact social icon small 28x28"
-                        class="social-icon" height="1024"
-                        src="/icons/AeroQrCode.png" width="1024"></a>
-                <p class="section-text">tools:</p>
+                <p class="section-text">Exploring my office space in AR. Tap on objects in the scene to learn more about me!
+                    Note: iOS / Android phone required to view. Demo video available <a href="/caspir-cam/index.html">here</a>. </p>
+                <p class="section-text">
+                <a href="https://adobeaero.app.link/K63pnCOlHCb"><img
+                        src="/icons/adobe-express-qr-code.png" alt="QR Code to Adobe Aero Experience" class="center">
+                </a>
+                </p>
+                <h3 class="section-heading">About this Portfolio:</h3>
+                <p class="section-text">The structure of this portfolio was highly influenced by bokoko's award winning portfolio as while as xyz's tutorials on creating interactive 3D website. The ability to further explore my office space in AR was an original idea.</p>
+                <p class="section-text">
+                <button class="button-33" role="button">Javascript</button>
+                <button class="button-33" role="button">Three.js/WebGL</button>
+                <button class="button-33" role="button">HTLM/CSS</button>
+                <button class="button-33" role="button">Blender</button>
+                <button class="button-33" role="button">Adobe Aero</button>
+                </p>
             </div>
 
         </section>
@@ -241,11 +268,11 @@
                 <h1 class="section-title blue-text blue-border">
                     <span class="section-title-text blue-text">Looking For More?</span>
                 </h1>
-                <span class="section-number blue-text">02</span>
+                <span class="section-number blue-text">06</span>
             </div>
             <div class="section-detail-wrapper">
-                <h3 class="section-heading">Additional Projects</h3>
-                <p class="section-text">Check out some of my work outside the XR space. Search my project experience [here].</p>
+<!--                <h3 class="section-heading">Additional Projects</h3>-->
+<!--                <p class="section-text">Check out some of my work outside the XR space. Search my project experience [here].</p>-->
                 <h3 class="section-heading">Get in Touch!</h3>
                 <div id="contact-container">
                     <!--Form Container-->
@@ -273,21 +300,17 @@
                         </div>
                         <div class="row" id="contact-button-container">
                             <!--Social Icons-->
-                            <a href="https://twitter.com/grace.raper" tabindex="-1" target="_blank"><img
-                                    alt="twitter contact social icon small 28x28"
-                                    class="social-icon" height="64"
-                                    src="/icons/twitter-icon.png" width="64"></a>
                             <a href="https://github.com/grace-raper" tabindex="-1" target="_blank"><img
                                     alt="github contact social icon small 28x28"
-                                    class="social-icon" height="64" src="/icons/github-icon.png"
-                                    width="64"></a>
+                                    class="social-icon" height="28" src="/icons/github-icon.png"
+                                    width="28"></a>
                             <a href="https://www.linkedin.com/in/graceraper/" tabindex="-1" target="_blank">
-                                <img alt="linkedin contact social icon small 28x28" class="social-icon " height="64"
-                                     src="/icons/linkedin-icon.png" width="64"></a>
+                                <img alt="linkedin contact social icon small 28x28" class="social-icon " height="28"
+                                     src="/icons/linkedin-icon.png" width="28"></a>
                             <a href="mailto:graceraper@gmail.com" tabindex="-1"> <img alt="email contact social icon small 28x28"
                                                                                       class="social-icon"
-                                                                                      height="64" src="/icons/mail-icon.png"
-                                                                                      width="64"></a>
+                                                                                      height="28" src="/icons/mail-icon.png"
+                                                                                      width="28"></a>
                             <!--              Submit Button-->
                             <div class="small-button orange-hover" id="contact-submit-button">
                                 Submit
@@ -295,10 +318,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            Insert legal stuff here?
-        </section>
 
+            </div>
+        </section>
     </div>
 </div>
 <script src="/main.js" type="module"></script>
