Contact form draft; Room click grabber is making it so i cannot fill out.

--- a/index.html
+++ b/index.html
@@ -408,5 +408,6 @@
 
 <script src="/main.js" type="module"></script>
 <script type="module" src="/Experience/script.js"></script>
+<script src="/Experience/Utils/contact-form.js"></script>
 </body>
 </html>
