--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, target-densityDpi=device-dpi, minimal-ui'
           name='viewport'/>
     <title>Grace Raper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- React and ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -475,8 +475,8 @@
     </div>
 </div>
 
-<script src="/main.js" type="module"></script>
-<script type="module" src="/Experience/script.js"></script>
-<script src="/Experience/Utils/contact-form.js"></script>
+<script src="./main.js" type="module"></script>
+<script type="module" src="./Experience/script.js"></script>
+<script src="./Experience/Utils/contact-form.js" type="module"></script>
 </body>
 </html>
