meta tags, socials, new intro copy

--- a/caspir-cam/index.html
+++ b/caspir-cam/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Caspir Cam | AI-Powered Photo Posing Assistant</title>
+    <meta name="description" content="Caspir Cam uses AR technology to help you perfect your poses and capture stunning photos. Get real-time guidance and feedback for professional-looking results." />
+    <meta name="keywords" content="Caspir Cam, AR Photo App, Pose Assistant, Photography App, AI Photography, Photo Posing Guide" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://graceraper.com/caspir-cam/" />
+    <meta property="og:title" content="Caspir Cam | AI-Powered Photo Posing Assistant" />
+    <meta property="og:description" content="Transform your photos with AI-powered pose guidance. Get real-time feedback and capture the perfect shot every time." />
+    <meta property="og:image" content="/caspir-cam/social-preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://graceraper.com/caspir-cam/" />
+    <meta property="twitter:title" content="Caspir Cam | AI-Powered Photo Posing Assistant" />
+    <meta property="twitter:description" content="Transform your photos with AI-powered pose guidance. Get real-time feedback and capture the perfect shot every time." />
+    <meta property="twitter:image" content="/caspir-cam/social-preview.png" />
   </head>
   <body>
     <div id="root"></div>
