added google analytics tag

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <meta property="twitter:image" content="/social-preview.png">
     
     <link rel="stylesheet" href="./style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7D3KVZ4ZWH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7D3KVZ4ZWH');
+    </script>
     <!-- React and ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -317,7 +326,7 @@
                             CoreML and the iPhone’s camera work together to analyze body alignment and offer precise step-by-step guidance.
                         </p>
                         <p class="section-text">
-                            View the product <a href="/caspir-cam/" class="project-link">website</a> to learn more! 
+                            View the product <a href="/caspir-cam" class="project-link">website</a> to learn more! 
                         </p>
                         <p class="tech-tags">
                             <span class="button-33">Swift</span>
